# klay

./: .travis.yml  NOTICE  README.md  WORKSPACE  build.gradle  pom.xml  settings.gradle
core/: BUILD.bazel  pom.xml
core/src/main/kotlin/klay/core/: AssertionUtil.kt  Assets.kt  BatchImpl.kt  Canvas.kt  Clock.kt  Color.kt  Event.kt  Exec.kt  Font.kt  GL20.kt  GLBatch.kt  GLUtil.kt  Game.kt  Gradient.kt  Graphics.kt  Image.kt  ImageImpl.kt  Input.kt  Json.kt  Key.kt  Keyboard.kt  Mouse.kt  Net.kt  Path.kt  Pattern.kt  Platform.kt  Pointer.kt  PythagorasExtensions.kt  QuadBatch.kt  RenderTarget.kt  Scale.kt  SoundImpl.kt  Storage.kt  StubPlatform.kt  Surface.kt  TextBlock.kt  TextFormat.kt  TextLayout.kt  TextWrap.kt  Texture.kt  (+8 more)
core/src/main/kotlin/klay/core/buffers/: Buffers.kt
core/src/main/kotlin/klay/core/json/: JsonAppendableWriter.kt  JsonArray.kt  JsonBuilder.kt  JsonImpl.kt  JsonObject.kt  JsonParser.kt  JsonParserException.kt  JsonStringTypedArray.kt  JsonTypedArray.kt  JsonTypes.kt  JsonWriterBase.kt  JsonWriterException.kt
core/src/main/kotlin/klay/core/react/: React.kt
core/src/test/kotlin/klay/core/json/: InternalJsonNumberTest.kt  InternalJsonParserTest.kt  InternalJsonTestSuite.kt  InternalJsonTypesTest.kt  InternalJsonWriterTest.kt
core/src/test/kotlin/klay/core/react/: ReactTest.kt
js/: pom.xml
js/src/main/kotlin/java/nio/: FloatBuffer.kt
js/src/main/kotlin/klay/js/: JsPlatform.kt
jvm/: BUILD.bazel  build.gradle  pom.xml
jvm/src/main/kotlin/klay/jvm/: BigClip.kt  BlendComposite.kt  GLFWGraphics.kt  GLFWInput.kt  JavaAssets.kt  JavaAudio.kt  JavaBitmapTransformer.kt  JavaCanvas.kt  JavaCanvasState.kt  JavaGraphics.kt  JavaImage.kt  JavaInput.kt  JavaLog.kt  JavaNet.kt  JavaPattern.kt  JavaPlatform.kt  JavaSound.kt  JavaStorage.kt  JavaTextLayout.kt  JavaWebSocket.kt  JvmBuffers.kt  JvmGL20.kt  JvmGraphics.kt  JvmPlatform.kt  LWJGLGraphics.kt
klay-demo/: build.gradle
klay-demo/klay-demo-jvm/: build.gradle
klay-jvm/: build.gradle
klay-jvm/src/main/kotlin/klay/core/: Actual.kt  Random.kt  StubPlatform.kt  toHexString.kt
klay-jvm/src/main/kotlin/klay/jvm/: BigClip.kt  GLFWGraphics.kt  GLFWInput.kt  JavaAssets.kt  JavaCanvas.kt  JavaGradient.kt  JavaImage.kt  JavaInput.kt  JavaPath.kt  JavaPlatform.kt  JavaSound.kt  JavaTextLayout.kt  JavaWebSocket.kt  LWJGLPlatform.kt
klay-scene/: build.gradle
klay-scene/klay-scene-jvm/: build.gradle
klay-scene/src/main/kotlin/klay/scene/: CanvasLayer.kt  ClippedLayer.kt  GroupLayer.kt  ImageLayer.kt  Interaction.kt  Layer.kt  LayerUtil.kt  Mouse.kt  Pointer.kt  RootLayer.kt  SceneGame.kt  Touch.kt
pythagoras/: pom-js.xml  pom.xml
pythagoras/src/main/kotlin-js/java/lang/: Math.kt  System.kt
scene/: BUILD.bazel  build.gradle  pom.xml
src/main/kotlin/klay/core/: Audio.kt  BatchImpl.kt  Canvas.kt  Event.kt  Exec.kt  Expected.kt  Font.kt  GLBatch.kt  GLProgram.kt  Game.kt  Graphics.kt  ImageImpl.kt  Json.kt  Keyboard.kt  Log.kt  Mouse.kt  Net.kt  Path.kt  PythagorasExtensions.kt  QuadBatch.kt  Random.kt  Scale.kt  Sound.kt  SoundImpl.kt  StubPlatform.kt  Surface.kt  TextBlock.kt  TextFormat.kt  TextLayout.kt  Texture.kt  Tile.kt  TileSource.kt  Tint.kt  TriangleBatch.kt
src/test/kotlin/klay/core/: TestUtils.kt
tests/: pom.xml
tests/assets/: pom.xml
tests/core/: BUILD.bazel  build.gradle  pom.xml
tests/core/src/main/kotlin/klay/tests/core/: CanvasStressTest.kt  CanvasTest.kt  ClearBackgroundTest.kt  ClippedLayerTest.kt  DepthTest.kt  DialogTest.kt  FullscreenTest.kt  ImageScalingTest.kt  LayerClickTest.kt  MouseWheelTest.kt  NetTest.kt  PauseResumeTest.kt  PointerMouseTouchTest.kt  ScaledTextTest.kt  ShaderTest.kt  SoundTest.kt  SubImageTest.kt  SurfaceTest.kt  Test.kt  TestsGame.kt  TextTest.kt  UI.kt
tests/js/: pom.xml
tests/js/src/main/kotlin/: JsMain.kt
tests/js/src/main/resources/: index.html
tests/jvm/: BUILD.bazel  build.gradle  pom.xml
tests/jvm/src/main/kotlin/klay/tests/jvm/: HelloLwjglMain.kt  JvmMain.kt  JvmTestsMain.kt
tripleklay/: build.gradle  pom.xml
tripleklay/core/: BUILD.bazel  build.gradle  pom.xml
tripleklay/demo/: build.gradle  pom.xml
tripleklay/demo/assets/: pom.xml
tripleklay/demo/core/: build.gradle  pom.xml
tripleklay/demo/jvm/: build.gradle  pom.xml
tripleklay/src/test/kotlin/tripleklay/: TestUtils.kt
tripleklay/tripleklay-demo/: build.gradle
tripleklay/tripleklay-demo/tripleklay-demo-jvm/: build.gradle
tripleklay/tripleklay-jvm/: build.gradle
(+617 files in other folders)
