load("@org_pubref_rules_kotlin//kotlin:rules.bzl", "kotlin_library", "kotlin_test")

# Make everything public while issue https://github.com/pubref/rules_kotlin/issues/27 is unresolved
package(default_visibility = ["//visibility:public"])

kotlin_library(
    name = "core",
    srcs = glob(["src/main/kotlin/**/*.kt"]),
    deps = [
        "@pythagoras_kt//:pythagoras_kt",
        "@react_kt//:react_kt"
    ],
    visibility = ["//visibility:public"]
)

kotlin_test(
    name = "internal_json_test",
    test_class = "klay.core.json.InternalJsonTestSuite",
    srcs = glob([
        "src/test/kotlin/**/*.kt",
        # We're testing `internal` classes, so we need them to be in the same module
        "src/main/kotlin/**/*.kt"
        ]),
    resources = glob(["src/test/resources/**"]),
    size = "small",
    deps = [
        ":core",
    ],
    java_deps = [
        "@junit4//jar",
    ],
)
