load("@org_pubref_rules_kotlin//kotlin:rules.bzl", "kotlin_library", "kotlin_test")

# Make everything public while issue https://github.com/pubref/rules_kotlin/issues/27 is unresolved
package(default_visibility = ["//visibility:public"])

kotlin_library(
    name = "jvm",
    visibility = ["//visibility:public"],
    srcs = glob(["src/main/kotlin/**/*.kt"]),
    deps = [
        "//core",
        "//scene",
    ],
    java_deps = [
        "@org_lwjgl_lwjgl//jar",
        "@org_lwjgl_lwjgl_glfw//jar",
        "@org_lwjgl_lwjgl_jemalloc//jar",
        "@org_lwjgl_lwjgl_opengl//jar",
        "@org_java_websocket_Java_WebSocket//jar",
        "@com_googlecode_soundlibs_mp3spi//jar",
        "@com_googlecode_soundlibs_jlayer//jar",
        "@com_googlecode_soundlibs_tritonus_share//jar",
#        "@org_lwjgl_lwjgl_natives_macos//jar",
    ]
)
