load("@org_pubref_rules_kotlin//kotlin:rules.bzl", "kotlin_library", "kotlin_test")

# Make everything public while issue https://github.com/pubref/rules_kotlin/issues/27 is unresolved
package(default_visibility = ["//visibility:public"])

kotlin_library(
    name = "core",
    srcs = glob(["src/main/kotlin/**/*.kt"]),
    deps = [
        "//core",
        "//scene",
    ],
    visibility = ["//tests:__subpackages__"]
)
